--- a/themes/custom/mas_olivero/css/base/mas.pcss.css
+++ b/themes/custom/mas_olivero/css/base/mas.pcss.css
@@ -183,6 +183,11 @@ div.category {
   font-weight: 900;
 }
 
+.pager__item a.button {
+  text-align: center;
+  margin: auto;
+}
+
 
 /* Statistik lists */
 
@@ -265,6 +270,7 @@ div#block-markaspotstatsaction {
   width: 68%;
   margin: 0;
   height: 0;
+
   @media (--sm) {
     top: 160px;
     max-width: 100vw;
@@ -287,23 +293,18 @@ div#block-markaspotstatsaction {
   @media (--xl) {
     margin: auto auto auto 50px;
   }
-
-  @media (--nav) {
-  }
-
-  @media (--grid-max) {
-  }
 }
 
 div#block-markaspotfrontaction,
 div#block-markaspotstatsaction {
 
   & ul.list-group {
+    list-style: none;
     display: flex;
     flex-direction: column;
     margin: 0;
     padding-left: 0;
-    border-radius: 0.25rem;
+    border-radius: 1rem;
     box-shadow: -36px 1px 36px rgb(0 0 0 / 18%);
 
     & .list-group-item:hover {
@@ -323,13 +324,12 @@ div#block-markaspotstatsaction {
     }
 
 
-    @media (--sm) {
       flex-direction: column;
 
       & > .list-group-item:first-child {
         border-left-width: 1px;
-        border-top-left-radius: inherit;
-        border-top-right-radius: inherit;
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
         border-bottom-left-radius: 0;
       }
 
@@ -340,8 +340,8 @@ div#block-markaspotstatsaction {
 
       & > .list-group-item:last-child {
         border-top-right-radius: 0;
-        border-bottom-right-radius: inherit;
-        border-bottom-left-radius: inherit;
+        border-bottom-right-radius: 1rem;
+        border-bottom-left-radius: 1rem;
         border-left-width: 1px;
 
       }
@@ -355,7 +355,7 @@ div#block-markaspotstatsaction {
         text-decoration: none;
         border: 1px solid rgba(0, 0, 0, 0.125);
       }
-    }
+
 
     @media (min-width: 700px) {
       flex-direction: row;
@@ -459,21 +459,11 @@ div#block-markaspotstatsaction {
   }
 }
 
-/* Stats */
-.page-node-type-page .layout__region {
-  margin: -10px;
-  padding: inherit;
-}
-
-
-
 .trend_count {
   font-size: 3em;
-  line-height: 80px;
-  background: #dddd;
+  line-height: 4rem;
   padding: 10px;
   text-align: center;
-  min-height: 230px;
 }
 
 .trend_count {
