--- a/themes/custom/mas_olivero/css/base/mas.pcss.css
+++ b/themes/custom/mas_olivero/css/base/mas.pcss.css
@@ -48,9 +48,16 @@
 }
 .node--type-service-request .node__content {
   & .category,
-  & .status {
+  & .status,
+  & .category a,
+  & .status a
+  {
     border-left: 2px solid #e7edf1;
+    text-decoration: none;
+    font-family: "Alte-DIN-1451-Mittelschrift", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-weight: 700;
   }
+
 }
 
 .node__content {
@@ -145,12 +152,6 @@ div.category {
   & .color-FFFFFF a {
     color: #fff;
   }
-}
-.status a,
-.category a {
-  text-decoration: none;
-  font-family: "Alte-DIN-1451-Mittelschrift", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-weight: 700;
 }
 
 .field--name-field-status-notes {
