Fix marker and search results after successfull geocoding

--- a/modules/geolocation_mapbox/geolocation_mapbox.css
+++ b/modules/geolocation_mapbox/geolocation_mapbox.css
@@ -1,3 +1,8 @@
 div#geolocation-mapbox-map {
   z-index: 0;
 }
+a.reset {
+  margin: 8px 6px!important;
+  padding: 0!important;
+  line-height: 1rem!important;
+}
