--- a/modules/markaspot_map/css/map.css
+++ b/modules/markaspot_map/css/map.css
@@ -1,4 +1,8 @@
 
+.path-frontpage .leaflet-control-container {
+  display: none;
+}
+
 .leaflet-clickable {
     -webkit-animation: pulsate 1s ease-in;
     -webkit-animation: pulsate 1s ease-out;
