--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -140,6 +140,33 @@
     flex-basis: calc(100% - 1.125rem);
   }
 
+.view-front-gallery {
+  .node__content {
+    position: relative;
+  }
+  .node__content h3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 10px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 2;
+  }
+
+  .node__content .image-primary {
+    z-index: 1;
+  }
+}
+
 div.paragraph .field--name-field-status-term, div.status .field--name-field-status-term, div.category .field--name-field-status-term {
       font-weight: 800;
   }
