--- a/themes/custom/mas_olivero/templates/content/node--view--front-gallery.html.twig
+++ b/themes/custom/mas_olivero/templates/content/node--view--front-gallery.html.twig
@@ -100,6 +100,6 @@
     {% endif %}
   </header>
   <div{{ content_attributes.addClass('node__content') }}>
-    {{ content|without('field_image', 'links') }}
+    {{ content|without('field_image', 'links') }}<h3>{{ label }}</h3>
   </div>
 </article>
