--- a/themes/custom/mas_olivero/css/base/mas.pcss.css
+++ b/themes/custom/mas_olivero/css/base/mas.pcss.css
@@ -80,31 +80,31 @@
   }
 }
 
-.view-front-gallery {
-  .node__content {
-    position: relative;
-  }
-  .node__content h3 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
-    padding: 10px;
-    font-size: 24px;
-    font-weight: bold;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 2;
-  }
+.view-front-gallery .node__top-wrapper {
+  position: relative;
+}
 
-  .node__content .image-primary {
-    z-index: 1;
-  }
+.view-front-gallery field--name-field-request-media {
+  margin-bottom: 10px;
+}
+
+.view-front-gallery .field--name-field-request-media img {
+  width: 100%;
+  height: auto;
+}
+
+.view-front-gallery .node__title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent background to make the text more readable. */
+  color: #fff;
+  padding: 10px;
+}
+
+.view-front-gallery .node__title a {
+  color: #fff;
 }
 
 
