Add title to main template

--- a/themes/custom/mas_olivero/css/base/mas.css
+++ b/themes/custom/mas_olivero/css/base/mas.css
@@ -133,7 +133,7 @@
     background: #fff;
     border-left: 2px solid #e7edf1;
     font-size: 1.3rem;
-    margin-bottom: 2.25rem;
+    /* margin-bottom: 2.25rem; */
   }
 
 .node__content .text-content {
