--- a/themes/custom/mas_olivero/css/base/fonts.pcss.css
+++ b/themes/custom/mas_olivero/css/base/fonts.pcss.css
@@ -7,20 +7,6 @@
 
 
 
-@font-face {
-  font-family: "Alte-DIN-1451-Mittelschrift";
-  src:
-          url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.ttf.woff") format("woff"),
-          url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.ttf.svg#Alte-DIN-1451-Mittelschrift") format("svg"),
-          url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.ttf.eot"),
-          url("../../fonts/DIN/Alte-DIN-1451-Mittelschrift.eot?#iefix") format("embedded-opentype");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-
-
 /* Apply custom font to elements and widgets */
 .primary-nav__menu-link,
 .field__label,
@@ -29,7 +15,7 @@
 h1,
 h2,
 h3 {
-  font-family: "Alte-DIN-1451-Mittelschrift", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-weight: 400;
   font-display: swap;
 }
