--- a/modules/markaspot_ui/css/markaspot_ui.icons.css
+++ b/modules/markaspot_ui/css/markaspot_ui.icons.css
@@ -6,11 +6,11 @@
 /**
  * Toolbar tab icon.
  */
-.toolbar-bar [data-drupal-link-system-path="admin/content/management"]:before,
+
 .toolbar-bar .toolbar-icon-markaspot-ui:before {
-    -webkit-mask-image:none!important;
-    background: transparent url(../images/logo.svg) 50% 50% no-repeat !important;
-    background-size: 100%;
+  -webkit-mask-image:none!important;
+  background: transparent url(../images/logo-small-invert.svg) 50% 50% no-repeat !important;
+  background-size: 100%;
 }
 
 img.toolbar-icon-home {
