--- a/modules/markaspot_ui/css/markaspot-settings.css
+++ b/modules/markaspot_ui/css/markaspot-settings.css
@@ -1,6 +1,7 @@
 /**
  * @file
  * Styling for Mark-a-Spot settings overview page.
+ * Uses Gin theme CSS custom properties for dark/light mode compatibility.
  */
 
 .markaspot-settings-overview {
@@ -68,6 +69,33 @@
   font-size: 0.9em;
   color: #666;
   line-height: 1.4;
+}
+
+/* Dark mode overrides */
+.gin--dark-mode .markaspot-settings-overview {
+  background-color: #2a2a2d;
+}
+
+.gin--dark-mode .markaspot-settings-overview h2 {
+  color: #d2d3d3;
+}
+
+.gin--dark-mode .markaspot-setting-item {
+  background-color: #3b3b3f;
+  border-color: #43454a;
+}
+
+.gin--dark-mode .markaspot-setting-item:hover {
+  background-color: #47474c;
+  border-color: #76777b;
+}
+
+.gin--dark-mode .markaspot-setting-title {
+  color: #559bca;
+}
+
+.gin--dark-mode .markaspot-setting-description {
+  color: #9e9fa0;
 }
 
 /* Module-specific icons */
